--- a/Requirements.txt
+++ b/Requirements.txt
@@ -3,3 +3,10 @@ Memberships
 * User should see link for pro plan on homepage
 * Basic plan link should point to regular Devise sign up form
 * Pro plan link should point to custom sign up form
+
+User Profiles
+* Each user should have one profile
+* User should see link to new profile form upon signing up
+* User should be able to create and view their user profile
+* User profile should have a profile picture
+* User should be able to view all user profiles
